--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,7 @@
                 android:id="@+id/auto_sync_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:clickable="false"
                 android:text="@string/menu_home_auto_sync"
                 android:textAlignment="center"
@@ -51,7 +52,9 @@
             android:text="@string/menu_home_history_title"
             android:textAlignment="viewStart"
             android:textSize="16sp"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="10dp"
+            android:paddingLeft="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -62,6 +65,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"
+            android:paddingBottom="64dp"
+            android:paddingRight="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
