--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -5,13 +5,16 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingTop="10dp"
+    android:paddingLeft="10dp"
     android:paddingBottom="10dp">
 
     <TextView
         android:id="@+id/history_data"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        android:paddingRight="10dp"
+        android:textColor="@color/black" />
 
     <Button
         android:id="@+id/history_copy"
